# remove-bg

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: deploy.yml
processor/: models.py  tasks.py  tests.py  urls.py  views.py
processor/management/commands/: cleanup_old_tasks.py
processor/migrations/: 0001_initial.py  0002_alter_processingtask_error_message_and_more.py
processor/static/processor/css/: style.css
processor/static/processor/js/: canvas-editor.js  main.js
processor/tests/: test_basic.py  test_celery.py  test_cleanup.py  test_integration.py  test_workflow.py
remove_bg/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: celery_healthcheck.py  entrypoint.sh
templates/processor/: home.html
