[project]
name = "remove-bg"
version = "0.1.0"
description = "AI background remover web app built with Django and rembg. Upload images, remove backgrounds instantly, download or copy results."
readme = "README.md"
license = { text = "MIT" }
keywords = ["django", "rembg", "background removal", "ai", "web app"]
authors = [
    { name = "Rafaela Nobre", email = "raafanobre@gmail.com" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "celery>=5.5.3",
    "celery-types==0.23.0",
    "django>=5.2.7",
    "google-cloud-logging>=3.12.1",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "python-decouple>=3.8",
    "python-json-logger>=4.0.0",
    "redis>=7.0.1",
    "rembg[cpu]>=2.0.67",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
